--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ruslan-fidesio/ionic-footer-navigation.git"
+    "url": "ruslan-fidesio/ionic-footer-navigation"
   },
   "ignore": [
     ".gitignore",
